# skill-office-docs

./: README.md  UPDATE.md  pyproject.toml  skill.yaml
src/skill_office_docs/: __init__.py  main.py
tests/: test_execute.py  test_skill_manifest_exists.py
